# cmes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  bitstamp.py  start_service.sh
app/: CMakeSettings.json
binding/: CMakeSettings.json
src/engine/: CMakeLists.txt  engine.cc  engine.h
src/example/: CMakeLists.txt  bitstamp_ws_test.cc  my_test.cc  ws_test.cc
src/util/: Encoding.h  WS.h
src/ws/: bitstamp_client.cc  bitstamp_client.h  client.h  ftx_client.cc  ftx_client.h
